--- a/src/components/ContactStyles.css
+++ b/src/components/ContactStyles.css
@@ -26,9 +26,14 @@
     background-color: #00BFA6;
     border: #00BFA6;
     border-radius: 25px;
-    width: 50%;
+    width: 65%;
     margin-top: 25px;
     color: #fff;
+}
+
+.contact .btn:hover {
+    background-color: rgb(175, 228, 175);
+    border: rgb(175, 228, 175);
 }
 
 @media screen and (max-width:920px) {
@@ -36,5 +41,8 @@
         text-align: center;
         padding: 5% 0%;
     }
+    .contact .btn {
+        width: 95%; 
+        }
     
 }
