--- a/src/components/HeroStyles.css
+++ b/src/components/HeroStyles.css
@@ -1,6 +1,7 @@
 .hero {
 font-family: 'Poppins';
-background-color: #f1f5f9;
+background-color: #22262a;
+color: #fff;
     }
 .hero {
 padding: 1% 5%;
