--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,45 +1,64 @@
-footer {
+.footer {
+    background-color: #22262a;
+    color: #fff;
+
+}
+.footer .container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: space-between;
+    padding: 1rem;
+
+}
+
+.footer h1 {
+    font-family: 'Nunito Sans';
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #fff;
+    margin-top: 5rem;
+}
+.footer span {
+    color: teal;
+}
+.footer .col {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .bar {
+    width: 30px;
+    border-bottom: 4px solid teal;
+    margin: 0.5rem 0;
+}
+
+.footer a {
     font-family: 'Poppins';
-    background-color: #f1f5f9;
-
+    font-size: 1rem;
+    text-decoration: none;
+    color: #fff;
 }
 
-footer .container-fluid {
-    padding: 0% 9%;
-
+.footer a:hover {
+    color: #fff;
 }
 
-footer .text-left {
-    text-align: left;
-    padding: 1% 0%;
+.footer .icon {
+    color: #fff;
+    margin-right: 4px;
 }
-footer .text-right {
-   text-align: right;
-    padding: 1% 0%;
-}
-
-footer .icons {
-    margin-left: 60px;
-    font-size: 25px;
-    color: rgb(167, 163, 163);
-    cursor: pointer;
+.footer h5 {
+    font-family: 'Poppins';
+    margin-top: 2rem;
 }
 
-footer .icons:hover {
-   
-color:#000;
-}
-@media screen and (max-width:920px) {
-    footer .text-left {
-        text-align: center;
+@media screen and (max-width: 940px) {
+    .footer .container {
+        grid-template-columns: repeat(2,1fr);
     }
-    footer .text-right {
-        text-align: center;
+
+    .footer .col-1 {
+        display: none;
     }
-    footer .icons {
-        margin:25px;
-        text-align: center;
-        font-size: 20px;
-    }
-    
 }
+ 
