--- a/src/components/NavStyles.css
+++ b/src/components/NavStyles.css
@@ -1,5 +1,6 @@
 header {
-    background-color: #f1f5f9;
+    background-color: #22262a;
+    color: #fff;
 
 }
 header .container-fluid {
@@ -9,13 +10,18 @@ header .navbar-brand {
 font-family: 'Nunito Sans';
 font-size: 2.5rem;
 font-weight: 700;
-color: #000;
+color: #fff;
 }
+
+header .navbar-brand:hover {
+   cursor: pointer;
+    color: #fff;
+    }
 
 header .nav-link {
     font-family: 'Poppins';
     font-size: 1.5rem;
-    color: #000;
+    color: #fff;
     margin-left: 25px;
     cursor: pointer;
 }
@@ -25,12 +31,12 @@ header .dot {
     font-weight: 900;
 }
 header .nav-link:hover {
-    color: #000;
+    color: #fff;
     text-decoration: underline #00BFA6;
 }
 
 header .navbar-toggler {
-    color: #000;
+    color: #fff;
 }
 
 @media screen and (max-width:920px) {
