--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -32,14 +32,15 @@
     margin: 0.5rem 0;
 }
 
-.footer a {
+.footer .links {
     font-family: 'Poppins';
     font-size: 1rem;
     text-decoration: none;
     color: #fff;
+    cursor: pointer;
 }
 
-.footer a:hover {
+.footer .links:hover {
     color: #fff;
 }
 
